...
                                    .cornerRadius(8)
                                    .padding(.horizontal)
                                }

                                HStack {
                                    if currentStep != .welcome {
                                        Button("Back") {
                                            withAnimation(.easeInOut(duration: 0.3)) {
                                                slideDirection = .right
                                                currentStep = RegistrationStep(rawValue: currentStep.rawValue - 1) ?? .welcome
                                            }
                                        }
                                    } else {
                                        Button("Skip for now") {
                                            // Return to main view in offline mode
                                            sharedState.skipRegistration = true
                                        }
                                        .foregroundStyle(.secondary)
                                    }
                                    Spacer()
                                    if currentStep == .welcome {
                                        Button("Next") {
                                            handleButtonAction()
                                        }
                                        .disabled(currentStep == .generateScreenName && (selectedScreenName.isEmpty || !isScreenNameAvailable || isCheckingAvailability))
                                    }
                                }
                                .padding()
...
    }

    private var welcomeView: some View {
        VStack {
            LogoView()
                .frame(width: 300, height: 300)
            Text("Arkavo")
                .font(.largeTitle)
                .fontWeight(.light)
                .padding(.bottom, 50)

            GeometryReader { geometry in
                HStack(spacing: 0) {
...
