...
    "About" : {

    },
    "Access exclusive posts and content from creators you support on Patreon." : {

    },
    "Account" : {
      "localizations" : {
        "es-US" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cuenta"
          }
...
    "Agreement accepted" : {

    },
    "All connections use end-to-end encryption with One-Time TDF technology to ensure your conversations remain private." : {

    },
    "Apple" : {
      "comment" : "The name of the social media platform represented by the \"apple.logo\" image.",
      "isCommentAutoGenerated" : true
    },
    "Are you sure you want to delete this post? This action cannot be undone." : {

    },
...

    },
    "Communication Channels" : {
      "comment" : "A label displayed above the list of communication channels for a contact.",
      "isCommentAutoGenerated" : true
    },
    "Connect" : {

    },
    "Connect Nearby" : {

    },
    "Connect to a Network" : {
...
    "Connected" : {

    },
    "Connected %@" : {

    },
    "Connected Accounts" : {

    },
    "Connected Peers" : {

    },
    "Connecting to live stream..." : {
...
    "Connection Error" : {

    },
    "Connection Failed" : {

    },
    "Contact Details" : {

    },
    "Contact Support" : {

    },
    "Content" : {
...
    "Debug" : {

    },
    "Debug Info" : {

    },
    "Delete" : {

    },
    "Delete Account" : {

    },
    "Delete Conversation?" : {
...
    "Discovering edge agents..." : {

    },
    "Dismiss" : {

    },
    "Done" : {
      "localizations" : {
        "es-US" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hecho"
          }
...
    "Make sure the other person has Arkavo open and is also searching for connections." : {

    },
    "Make sure this is the person you want to connect with. They will receive a connection request." : {

    },
    "Manage Connected Accounts" : {

    },
    "Manual Connection" : {

    },
    "Map" : {
...
    "Owner:" : {

    },
    "Paste content ticket" : {

    },
    "Patreon" : {
      "comment" : "The name of the social media platform \"Patreon\".",
      "isCommentAutoGenerated" : true
    },
    "Peer-to-peer mesh networking for secure local communication" : {

    },
...
    "Privacy Policy" : {

    },
    "Processing..." : {

    },
    "Profile" : {
      "localizations" : {
        "es-US" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Perfil"
          }
...
    "Secure Connections" : {

    },
    "Send" : {

    },
    "Send Message" : {

    },
    "Send your Arkavo link with the iOS Share Sheet to connect with someone you already know—no matter the distance." : {

    },
    "server.example.com" : {
...
